# content-summarization

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
